--- a/web/polymer-elements/faceted-search/faceted-search.html
+++ b/web/polymer-elements/faceted-search/faceted-search.html
@@ -38,6 +38,8 @@
             .badge-inverse {
                 background-color: #333333;
             }
+
+
         </style>
 
 
@@ -50,7 +52,7 @@
                             <div objectToHide="{{d[0]}}" on-click="{{headerClick}}">{{d[0]}}</div>
                         </h4>
                     </div>
-                    <div id="{{d[0]}}" class="panel-collapse collapse">
+                    <div id="{{d[0]}}" class="panel-collapse collapse in">
                         <div class="panel-body">
                             <ul class="nav nav-pills nav-stacked">
                                     <template repeat="{{p in d[2]}}">
