- Added name of collection in Mongodb

--- a/web/dataset.html
+++ b/web/dataset.html
@@ -192,6 +192,11 @@
                 </div>
 
                 <br>
+                <paper-input-decorator id="collectionSec" style="display: none; margin-top: -15px"
+                                       label="Name of collection" class="custom" floatingLabel>
+                    <input is="core-input" id="collectionInput" ng-model="collection">
+                </paper-input-decorator>
+                <br>
                 <paper-input-decorator style="margin-top: -15px" label="Endpoint URL" class="custom" floatingLabel>
                     <input is="core-input" id="endPointInput" ng-model="endPoint">
                 </paper-input-decorator>
