added badge to Search params widget

--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -172,7 +172,7 @@
                     <!--Widgets must have 'widget' class in order to render their loading screen-->
                     <div class="box box-primary widget">
                         <div class="box-header">
-                            <h3 class="box-title">Designation</h3>
+                            <h3 class="box-title" id="here">Designation</h3>
                         </div>
                         <!-- box-body -->
                         <div class="box-body chart-responsive">
