--- a/web/polymer-elements/faceted-search/faceted-search.html
+++ b/web/polymer-elements/faceted-search/faceted-search.html
@@ -49,7 +49,7 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <div objectToHide="{{d[0]}}" on-click="{{headerClick}}">{{d[0]}}</div>
+                            <div objectToHide="{{d[0]}}" on-click="{{headerClick}}">{{d[0]}}  <span class="badge">{{d[4]}}</span></div>
                         </h4>
                     </div>
                     <div id="{{d[0]}}" class="panel-collapse collapse in">
@@ -140,11 +140,13 @@
                 //change badges values when data is filtered.
                 //this.dimensions[i]["values"][1] gets updated
 
+
                 console.log("chartUpdated called");
                 for (var i= 0; i < this.dimensions.length; i++)
                 {
 
                     if(this.dimensions[i][0] == dimensionName) {
+                        this.dimensions[i][4] = 0;
 
                         var badges = this.dimensions[i][2];
                         var val = this.dimensions[i][1].group().all();
@@ -156,12 +158,17 @@
                                    badges[j][1] = val[k].value;
                                }
 
+
                             }
+                            this.dimensions[i][4] += badges[j][1];
 
                         }
+
                     }
 
                 }
+
+
 
             },
 
