--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -107,10 +107,14 @@
             <ul class="sidebar-menu">
                 <li class="header">MAIN NAVIGATION</li>
 
-                <li class="active">
-                    <a href="dashboard.html">
-                        <i class="fa fa-pie-chart"></i> <span>Dashboard</span>
+                <li class="treeview active">
+                    <a href="#">
+                        <i class="fa fa-pie-chart"></i> <span>Dashboard</span><i class="fa fa-angle-left pull-right"></i>
                     </a>
+                    <ul class="treeview-menu">
+                        <li class="active"><a href="dashboard.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
+                        <li><a href="#"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+                    </ul>
                 </li>
                 <li class="treeview">
                     <a href="#">
