--- a/web/newquery.html
+++ b/web/newquery.html
@@ -2,7 +2,7 @@
 <html ng-app>
 <head>
     <meta charset="UTF-8">
-    <title>Sefarad 2.0 | SPARQL Editor</title>
+    <title>Sefarad 2.0 | Add Query</title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
 
     <!-- Polymer: Load Polymer platform support before any code that touches the DOM. -->
@@ -104,10 +104,14 @@
             <ul class="sidebar-menu">
                 <li class="header">MAIN NAVIGATION</li>
 
-                <li>
-                    <a href="dashboard.html">
-                        <i class="fa fa-pie-chart"></i> <span>Dashboard</span>
+                <li class="treeview">
+                    <a href="#">
+                        <i class="fa fa-pie-chart"></i> <span>Dashboard</span><i class="fa fa-angle-left pull-right"></i>
                     </a>
+                    <ul class="treeview-menu">
+                        <li><a href="dashboard.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
+                        <li><a href="#"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+                    </ul>
                 </li>
                 <li class="treeview active">
                     <a href="#">
