--- a/web/register.html
+++ b/web/register.html
@@ -2,23 +2,11 @@
 <html ng-app>
 <head>
     <meta charset="UTF-8">
-    <title>Sefarad 2.0 | Add Dataset</title>
+    <title>Sefarad 2.0 | Register</title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
 
-    <!-- Polymer: Load Polymer platform support before any code that touches the DOM. -->
-    <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
-
-    <link href="https://www.polymer-project.org/0.5/components/polymer/polymer.html" rel="import">
     <!-- Dart Support -->
     <script src="packages/web_components/dart_support.js"></script>
-
-    <!-- ------------------------------- STYLE LINKS ZONE -------------------------------------- -->
-
-    <link href='//cdn.jsdelivr.net/yasqe/2.3.8/yasqe.min.css' rel='stylesheet' type='text/css'/>
-    <link href='//cdn.jsdelivr.net/yasr/2.4.12/yasr.min.css' rel='stylesheet' type='text/css'/>
-
-
-    <!-- ------------------------------- end/ STYLE LINKS ZONE --------------------------------- -->
 
     <!-- Bootstrap 3.3.2 -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
@@ -29,25 +17,13 @@
     <link href="http://code.ionicframework.com/ionicons/2.0.0/css/ionicons.min.css" rel="stylesheet" type="text/css"/>
     <!-- Theme style -->
     <link href="dist/css/AdminLTE.min.css" rel="stylesheet" type="text/css"/>
-    <!-- AdminLTE Skins. Choose a skin from the css/skins 
+    <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
     <link href="dist/css/skins/_all-skins.min.css" rel="stylesheet" type="text/css"/>
     <!-- iCheck -->
     <link href="plugins/iCheck/flat/blue.css" rel="stylesheet" type="text/css"/>
     <!-- Own Css -->
-    <link href="newquery.css" rel="stylesheet" type="text/css"/>
     <link href="common.css" rel="stylesheet" type="text/css"/>
-    <!-- Morris chart -->
-    <link href="plugins/morris/morris.css" rel="stylesheet" type="text/css"/>
-    <!-- jvectormap -->
-    <link href="plugins/jvectormap/jquery-jvectormap-1.2.2.css" rel="stylesheet" type="text/css"/>
-    <!-- Date Picker -->
-    <link href="plugins/datepicker/datepicker3.css" rel="stylesheet" type="text/css"/>
-    <!-- Daterange picker -->
-    <link href="plugins/daterangepicker/daterangepicker-bs3.css" rel="stylesheet" type="text/css"/>
-    <!-- bootstrap wysihtml5 - text editor -->
-    <link href="plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css" rel="stylesheet" type="text/css"/>
-
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -66,7 +42,6 @@
 
     <!-- ------------------------------- POLYMER COMPONENTS IMPORT ZONE ------------------------ -->
 
-    <link href="polymer-elements/paper-input-decorator/paper-input-decorator.html" rel="import">
     <link href="polymer-elements/paper-button/paper-button.html" rel="import">
     <link href="polymer-elements/paper-action-dialog/paper-action-dialog.html" rel="import">
 
@@ -176,12 +151,12 @@
                         <li><a href="#"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
                     </ul>
                 </li>
-                <li class="treeview active">
+                <li class="treeview">
                     <a href="#">
                         <i class="fa fa-database"></i> <span>Query</span><i class="fa fa-angle-left pull-right"></i>
                     </a>
                     <ul class="treeview-menu">
-                        <li class="active"><a href="dataset.html"><i class="fa fa-circle-o"></i> Add Dataset</a></li>
+                        <li><a href="dataset.html"><i class="fa fa-circle-o"></i> Add Dataset</a></li>
                         <li><a href="query.html"><i class="fa fa-circle-o"></i> SPARQL Editor</a></li>
                         <li><a href="newquery.html"><i class="fa fa-circle-o"></i> Add Query</a></li>
                     </ul>
@@ -197,8 +172,8 @@
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <h1 horizontal layout>
-                Add Dataset
-                <small horizontal layout style="margin-top: 5px">Create your own dataset
+                Register
+                <small horizontal layout style="margin-top: 5px">Create your account
 
                     <template is="auto-binding">
 
@@ -208,18 +183,18 @@
                             </button>
 
                             <paper-action-dialog class="size-position" style="height: 320px" backdrop autoCloseDisabled layered="false">
-                                <h3>Add Dataset</h3>
+                                <h3>Register</h3>
                                 <ol>
-                                    <li> Give it a name </li>
+                                    <li> Write your name </li>
                                     <br>
-                                    <li> Define your type of dataset (Sparql or MongoDb)</li>
+                                    <li> Type your e-mail account</li>
                                     <br>
-                                    <li> Write the web service endpoint </li>
+                                    <li> Write your password </li>
                                     <br>
-                                    <li> Save it*</li>
+                                    <li> Rewrite your password for security </li>
                                 </ol>
 
-                                <h5>*If an error occurs saving data, check chose type of dataset</h5>
+                                <h5>*Also it's possible to sign in with Facebook/Google+ account</h5>
                                 <paper-button affirmative autofocus>Tap me to close</paper-button>
                             </paper-action-dialog>
 
@@ -229,65 +204,53 @@
             </h1>
             <ol class="breadcrumb">
                 <li><a href="#"> Home</a></li>
-                <li class="active"><i class="fa fa-cogs"></i>    Dataset</li>
+                <li class="active"><i class="fa fa-sign-in"></i>    Register</li>
             </ol>
         </section>
 
         <!-- Main content -->
         <section class="content">
 
-            <div id="queries">
+            <div class="register-box">
 
-                <paper-input-decorator label="Name of dataset"
-                                       class="custom" floatingLabel>
-                    <input is="core-input" id="queryNameSelector" ng-model="name">
-                </paper-input-decorator>
+                <div class="register-box-body">
+                    <form action="#" method="post">
+                        <div class="form-group has-feedback">
+                            <input type="text" class="form-control" placeholder="Full name"/>
+                            <span class="glyphicon glyphicon-user form-control-feedback"></span>
+                        </div>
+                        <div class="form-group has-feedback">
+                            <input type="text" class="form-control" placeholder="Email"/>
+                            <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+                        </div>
+                        <div class="form-group has-feedback">
+                            <input type="password" class="form-control" placeholder="Password"/>
+                            <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+                        </div>
+                        <div class="form-group has-feedback">
+                            <input type="password" class="form-control" placeholder="Retype password"/>
+                            <span class="glyphicon glyphicon-log-in form-control-feedback"></span>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-4">
 
-                <br>
-                <p class="text-light-blue">Choose a type of dataset:</p>
-                <select id="typeSelector" class="form-control" ng-change="checkType()" ng-model="type">
-                    <option style="display:none" value="">Select a type</option>
-                    <option selected>Sparql</option>
-                    <option>MongoDb</option>
-                </select>
+                                <paper-button type="submit" raised class="colored btn-block btn-flat"
+                                              id="btn_save">Register</paper-button>
+                            </div><!-- /.col -->
+                        </div>
+                    </form>
 
-                <div id="loginUser" style="display: none;" horizontal layout>
-                    <paper-input-decorator style="width: 35%; margin-right: 20px" label="User" class="custom"l>
-                        <input is="core-input" id="userInput" ng-model="user">
-                    </paper-input-decorator>
-                    <paper-input-decorator style="width: 35%;" label="Password" class="custom" >
-                        <input is="core-input" type="password" ng-model="password">
-                    </paper-input-decorator>
-                </div>
+                    <div class="social-auth-links text-center">
+                        <p>- OR -</p>
+                        <paper-button raised class="btn-facebook btn-social btn-block btn-flat"
+                                      id="btn_facebook"><i class="fa fa-facebook"></i> Sign up using Facebook</paper-button>
+                        <paper-button raised class="btn-google-plus btn-social btn-block btn-flat"
+                                      id="btn_google"><i class="fa fa-google-plus"></i> Sign up using Google+</paper-button>
+                    </div>
 
-                <br>
-                <paper-input-decorator id="collectionSec" style="display: none; margin-top: -15px"
-                                       label="Name of collection" class="custom" floatingLabel>
-                    <input is="core-input" id="collectionInput" ng-model="collection">
-                </paper-input-decorator>
-                <br>
-                <paper-input-decorator style="margin-top: -15px" label="Endpoint URL" class="custom" floatingLabel>
-                    <input is="core-input" id="endPointInput" ng-model="endPoint">
-                </paper-input-decorator>
-
-                <br>
-                <div class="alert alert-danger alert-dismissable hide" id="saveError">
-                    <i class="fa fa-ban"></i>
-
-                    <b>Save failed</b>
-                </div>
-
-                <div class="alert alert-success alert-dismissable hide" id="saveSuccess">
-                    <i class="fa fa-check"></i>
-
-                    <b>Saved successfully</b>
-                </div>
-                <div class="save_btnGroup">
-                    <paper-button raised class="colored" id="btn_save" ng-click="saveData()">Save</paper-button>
-                    <paper-button raised class="colored" id="btn_clear" ng-click="clearFilters()">Clear</paper-button>
-                </div>
-
-            </div>
+                    <a href="dashboard.html" class="text-center">I already have a membership</a>
+                </div><!-- /.form-box -->
+            </div><!-- /.register-box -->
 
         </section>
         <!-- /.content -->
@@ -308,18 +271,10 @@
 <script src="plugins/jQuery/jQuery-2.1.3.min.js"></script>
 <!-- jQuery UI 1.11.2 -->
 <script src="http://code.jquery.com/ui/1.11.2/jquery-ui.min.js" type="text/javascript"></script>
-<!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
-<script>
-    $.widget.bridge('uibutton', $.ui.button);
-</script>
 <!-- Bootstrap 3.3.2 JS -->
 <script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 <!-- Dart -->
-<script type="application/dart" src="dataset.dart"></script>
 <script type="text/javascript" src="packages/browser/dart.js"></script>
-<!-- Morris.js charts -->
-<script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
-<script src="plugins/morris/morris.min.js" type="text/javascript"></script>
 <!-- Sparkline -->
 <script src="plugins/sparkline/jquery.sparkline.min.js" type="text/javascript"></script>
 <!-- jvectormap -->
@@ -329,16 +284,12 @@
 <script src="plugins/knob/jquery.knob.js" type="text/javascript"></script>
 <!-- daterangepicker -->
 <script src="plugins/daterangepicker/daterangepicker.js" type="text/javascript"></script>
-<!-- datepicker -->
-<script src="plugins/datepicker/bootstrap-datepicker.js" type="text/javascript"></script>
 <!-- Bootstrap WYSIHTML5 -->
 <script src="plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js" type="text/javascript"></script>
 <!-- iCheck -->
 <script src="plugins/iCheck/icheck.min.js" type="text/javascript"></script>
 <!-- Slimscroll -->
 <script src="plugins/slimScroll/jquery.slimscroll.min.js" type="text/javascript"></script>
-<!-- FastClick -->
-<script src='plugins/fastclick/fastclick.min.js'></script>
 <!-- AdminLTE App -->
 <script src="dist/js/app.min.js" type="text/javascript"></script>
 
@@ -347,7 +298,14 @@
 
 <!-- AdminLTE for demo purposes -->
 <script src="dist/js/demo.js" type="text/javascript"></script>
-<script type="text/javascript">
+<script>
+    $(function () {
+        $('input').iCheck({
+            checkboxClass: 'icheckbox_square-blue',
+            radioClass: 'iradio_square-blue',
+            increaseArea: '20%' // optional
+        });
+    });
 
     var scope = document.querySelector('template[is=auto-binding]');
 
@@ -361,8 +319,7 @@
         }
         d.toggle();
     };
-
-
 </script>
+
 </body>
 </html>
