--- a/web/polymer-elements/bar-chart/bar-chart.html
+++ b/web/polymer-elements/bar-chart/bar-chart.html
@@ -22,6 +22,7 @@
 
             ready: function() {
                 console.log("bar-chart ready");
+                //this.init();
             },
 
             init: function () {
