--- a/web/polymer-elements/faceted-search/faceted-search.html
+++ b/web/polymer-elements/faceted-search/faceted-search.html
@@ -176,6 +176,7 @@
 
             ready: function() {
                 console.log("faceted-search ready");
+                //this.init();
             },
 
             init: function () {
