--- a/web/polymer-elements/leaflet-map/leaflet-map.html
+++ b/web/polymer-elements/leaflet-map/leaflet-map.html
@@ -34,6 +34,7 @@
 
        ready: function() {
            console.log("leaflet-map ready");
+           //this.init();
        },
 
        crossfilterObjectChanged : function () {
