--- a/web/polymer-elements/pie-chart/pie-chart.html
+++ b/web/polymer-elements/pie-chart/pie-chart.html
@@ -20,6 +20,8 @@
 
             ready: function() {
                 console.log("pie-chart ready");
+
+                //this.init();
             },
 
             crossfilterObjectChanged : function () {
